clusters/minikube/kubernetes-manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: swetasgitaksupdate 
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: swetasgitaksupdate
  template:
    metadata:
      labels:
        app: swetasgitaksupdate 
    spec:
      imagePullSecrets:
        - name: image-pull-secret
      containers:
        - name: swetasgitaksupdate 
          image: akservice001registry.azurecr.io/azurekubeserviceapp:57540
          ports:
          - containerPort: 8080
